<resources>

    <!-- Main -->
    <string name="app_name">TagExpend</string>
    <string name="action_search">Search</string>
    <string name="main_popup_unfollow">Unfollow</string>

    <!-- Icon -->
    <string name="icon_location">\u27B4</string>
    <string name="icon_general">\u2606</string>
    <string name="icon_dollar">\u0024</string>
    <string name="icon_category">\u238A</string>
    <string name="icon_at">\u0040</string>
    <string name="icon_all">*</string>

    <!-- Splash -->
    <string name="splash_msg">Your Money Tag</string>

    <!-- Home Fragment -->
    <string name="home_frag_title">Home</string>

    <!-- Tag Cloud Fragment -->
    <string name="tag_cloud_frag_title">Tag Cloud</string>

    <!-- Chart Fragment -->
    <string name="chart_frag_title">Chart</string>
    <string name="chart_frag_unfollow">Unfollow</string>

    <!-- Main Activity -->
    <string name="main_subtitle_trans">transactions</string>
    <string name="main_subtitle_tags">tags</string>
    <!-- Form Activity -->
    <string name="form_defaultMsg">What\'s your transaction?</string>
    <string name="form_hint">\u2606: general tag \n \u27B4: location tag \n \u0024: amount \n \u238A: category tag</string>
    <string name="form_error_format">Incorrect Format!</string>

    <!-- Explore Activity -->
    <string name="explore_activity_title">Explore</string>
    <string name="explore_frag_title_search">Search</string>
    <string name="explore_frag_title_following">Following</string>
    <string name="explore_button_pull">Pull</string>
    <string name="explore_button_refresh">Refresh</string>

    <!-- Tag Activity -->
    <string name="tag_activity_title">Tag</string>
    <string name="tag_frag_title_list">List</string>
    <string name="tag_frag_title_trend">Trend</string>
    <string name="tag_frag_trend_label">Amount</string>
    <string name="tag_frag_delete_msg">Delete Tag</string>
    <string name="tag_frag_change_color_msg">Change Color</string>


    <!-- Setting Activity -->
    <string name="setting_activity_title">Setting</string>

    <!-- Search -->
    <string name="search_hint_tag">Search tag</string>

    <!-- Drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_local">Local</string>
    <string name="nav_following">Following</string>
    <string name="nav_more">More</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_all">All</string>

    <!-- Dialog -->
    <string name="dialog_title_select_follow">Select a name</string>
    <string name="dialog_title_update_name">Enter your name</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_success">Update successfully!</string>
    <string name="dialog_title_color">Select your color</string>

    <!-- Default -->
    <string name="user_default">local</string>

    <!-- Twitter -->
    <string name="twitter_key">PvpXWnRXyy9ggCnhsh26aGOLc</string>
    <string name="twitter_secret">VX0q8UBgeIiT4UT5fzygdfq49xiwWzTOoL0wKxZaGs0sg7Qjfy</string>
    <string name="twitter_msg_not_login">No twitter account connected!</string>
    <string name="twitter_msg_disconnected">Twitter disconnected!</string>
    <string name="twitter_msg_connected">Twitter connected!</string>
    <string name="twitter_msg_connect_fail">Twitter connect fail!</string>
    <string name="twitter_msg_no_session">No active twitter session!</string>
    <string name="twitter_hint_search">Search twitter user</string>
    <string name="twitter_status_connected">Connected</string>
    <string name="twitter_status_disconnected">Disconnected</string>
    <string name="twitter_tail">- #TagExpend</string>

    <!-- Follow -->
    <string name="follow_msg_pull_success">Pull successfully!</string>

    <!-- Time Ago -->
    <string name="time_just_now">just now</string>
    <string name="time_a_minute_ago">a minute ago</string>
    <string name="time_minutes_ago">minutes ago</string>
    <string name="time_an_hour_ago">an hour ago</string>
    <string name="time_hours_ago">hours ago</string>
    <string name="time_yesterday">yesterday</string>
    <string name="time_days_ago">days ago</string>

    <!-- Internal -->
    <!-- Tag DB -->
    <string name="db_trans">transDB</string>
    <string name="db_tag">tagCloudDB</string>
    <string name="db_user">userDB</string>

    <!-- Button Layout -->
    <string name="button_save">Save</string>
    <string name="button_twitter">twitter</string>

    <!-- SharedPreferences -->
    <string name="shared_pref_name_user">USER</string>
    <string name="shared_pref_name_main">MAIN</string>
    <string name="shared_pref_arg_username">username</string>
    <string name="shared_pref_arg_default_display_name">defaultUsername</string>
    <string name="shared_pref_arg_follow_user">followUsername</string>
    <string name="shared_pref_arg_selected_pos">selectedPosition</string>
    <string name="shared_pref_arg_auto_post">autoPost</string>
    <string name="shared_pref_arg_twitter_connected">twitterConnected</string>
    <string name="shared_pref_arg_year">year</string>
    <string name="shared_pref_arg_month">month</string>

    <!-- Intent -->
    <string name="intent_extra_id">ID</string>
    <string name="intent_extra_original_msg">original</string>
    <string name="intent_extra_trans">trans</string>
    <string name="intent_extra_tag">tag</string>
    <string name="intent_extra_color">color</string>
    <!-- Pattern -->
    <string name="pattern_date_twitter">EEE MMM dd HH:mm:ss ZZZZZ yyyy</string>
    <string name="pattern_date_app">dd/MM/yyyy HH:mm:ss</string>

    <!-- Helper -->
    <string name="helper_image_path_start">/Android/data/</string>
    <string name="helper_image_path_end">/ProfileImage</string>
    <string name="helper_image_name_start">PI_</string>
    <string name="helper_image_name_end">.jpg</string>
    <string name="helper_pull_all">pullAll</string>


    <!-- Month -->
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>

    <string name="month_jan">Jan</string>
    <string name="month_feb">Feb</string>
    <string name="month_mar">Mar</string>
    <string name="month_apr">Apr</string>
    <string name="month_jun">Jun</string>
    <string name="month_jul">Jul</string>
    <string name="month_aug">Aug</string>
    <string name="month_sep">Sep</string>
    <string name="month_oct">Oct</string>
    <string name="month_nov">Nov</string>
    <string name="month_dec">Dec</string>
</resources>
