<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button_layout"
    android:background="@color/white"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:elevation="5dp">

    <LinearLayout
        android:id="@+id/button_layout_main"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="5">

        <Button
            android:id="@+id/button_star"
            android:text="@string/icon_general"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickStar"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/button_at"
            android:text="@string/icon_location"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickAt"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/button_dollar"
            android:text="@string/icon_dollar"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickDollar"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/button_category"
            android:text="@string/icon_category"
            android:textSize="28sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickCategory"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/button_twitter"
            android:contentDescription="@string/button_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/twitter_24"
            android:onClick="clickTwitter"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />


    </LinearLayout>


    <ImageButton
        android:id="@+id/button_save"
        android:contentDescription="@string/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_done_black_24dp"
        android:onClick="clickSave"
        android:background="@android:color/transparent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"/>


</RelativeLayout>