<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent">

    <EditText
        android:paddingTop="20dp"
        android:id="@+id/dialog_set_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_title_update_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <Button
            android:id="@+id/dialog_set_name_cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:background="@drawable/tw__transparent"
             />

        <Button
            android:id="@+id/dialog_set_name_ok"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_okay"
            android:layout_marginEnd="5dp"
            android:background="@drawable/tw__transparent"/>

    </LinearLayout>

</LinearLayout>