<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button_layout"
    android:background="@color/white"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:elevation="5dp">

    <LinearLayout
        android:id="@+id/button_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="3">

        <Button
            android:id="@+id/button_star"
            android:text="@string/icon_general"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickStar"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/button_at"
            android:text="@string/icon_location"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickAt"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/button_category"
            android:text="@string/icon_category"
            android:textSize="28sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="clickCategory"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />

    </LinearLayout>


</RelativeLayout>